<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShoppingMiniProject</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_items_db">Items list</string>
    <string name="title_activity_shopping">Shopping list</string>
    <string name="title_activity_item_row">Add/edit item</string>
    <string name="main_activity_top_text">This application is intended to be used in landscape mode on a 7\"+ device</string>
    <string name="column_name_item">Item</string>
    <string name="column_name_quantity">Qauntity</string>
    <string name="column_name_unit">Unit</string>
    <string name="column_name_price">Price</string>
    <string name="column_name_shop">Shop</string>
    <string name="column_name_shopping_quantity">Shopping\nquantity</string>
    <string name="column_name_bought">Bought</string>
    <string name="column_name_shopping_price">Shopping\n price</string>
    <string name="main_activity_button_item_list">Items list</string>
    <string name="main_activity_button_shopping_list">Shopping list</string>
    <string name="main_activity_button_reset_db_default">Reset database to default list</string>
    <string name="main_activity_button_reset_db_clean">Reset database to empty list</string>
    <string name="main_activity_button_done">Done</string>
    <string name="items_activity_button_add">Add new Item</string>
    <string name="items_activity_button_edit">Edit Item</string>
    <string name="items_activity_button_delete">Delete Item</string>
    <string name="items_activity_button_done">Done</string>
    <string name="shopping_activity_button_add_shopping_item">Add one item to shopping list</string>
    <string name="shopping_activity_button_remove_shopping_item">Remove one item from shopping list</string>
    <string name="shopping_activity_button_mark_bought">Mark item(s) as bought</string>
    <string name="shopping_activity_button_unmark_bought">Unmark item(s) as bought</string>
    <string name="shopping_activity_button_done">Done</string>
    <string name="shopping_activity_textview_bought_total">Bought items total:</string>
    <string name="shopping_activity_textview_bought_total_amount">0</string>
    <string name="shopping_activity_textview_bought_dkk">Kr.</string>
    <string name="shopping_activity_textview_total">Shopping total (excl. bought items):</string>
    <string name="shopping_activity_textview_total_amount">0</string>
    <string name="shopping_activity_textview_dkk">Kr.</string>
    <string name="shopping_activity_textview_total_incl_bought">Shopping total (incl. bought items):</string>
    <string name="shopping_activity_textview_total_amount_incl_bought">0</string>
    <string name="shopping_activity_textview_dkk_incl_bought">Kr.</string>
    <string name="item_row_activity_item">Item:</string>
    <string name="item_row_activity_quantity">Quantity:</string>
    <string name="item_row_activity_unit">Unit:</string>
    <string name="item_row_activity_price">Price (DKK):</string>
    <string name="item_row_activity_shop">Shop:</string>
    <string name="item_row_activity_button_done">Done</string>

</resources>