<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:orientation="horizontal" 
        android:layout_width="fill_parent"
        android:layout_height="45sp" >
	    <Button
	    	android:id="@+id/items_activity_button_add"
	        android:layout_gravity="left"
	        android:layout_width="wrap_content"
	        android:layout_height="40sp"
	        android:layout_weight="0.5"
	        android:text="@string/items_activity_button_add" />
	    <Spinner
 			android:id="@+id/items_activity_spinner"
 			android:layout_width="wrap_content"
 			android:layout_height="40sp"
 			android:layout_weight="1.0"
 			android:drawSelectorOnTop="true"/>

	    <Button
	        android:id="@+id/items_activity_button_edit"
	        android:layout_gravity="right"
	        android:layout_width="wrap_content"
	        android:layout_height="40sp"
	        android:layout_weight="0.5"
	        android:text="@string/items_activity_button_edit" />
	    <Button
	        android:id="@+id/items_activity_button_delete"
	        android:layout_gravity="right"
	        android:layout_width="wrap_content"
	        android:layout_height="40sp"
	        android:layout_weight="0.5"
	        android:text="@string/items_activity_button_delete" />
	    <Button
	        android:id="@+id/items_activity_button_done"
	        android:layout_gravity="right"
	        android:layout_width="wrap_content"
	        android:layout_height="40sp"
	        android:layout_weight="0.5"
	        android:text="@string/items_activity_button_done" />
    </LinearLayout>	
    <LinearLayout
	     android:layout_width="match_parent"
	     android:layout_height="50sp"
	     android:layout_marginTop="0sp"
	     android:orientation="horizontal">
		<TextView
		    android:id="@+id/column_name_item"
		   	android:gravity="center"
		    android:layout_width="400sp"
		    android:layout_weight="7"
		    android:layout_marginLeft="10sp"
		    android:layout_height="50sp"
		    android:text="@string/column_name_item" />
		<TextView 
		    android:id="@+id/column_name_quantity"
		    android:gravity="center"
		    android:layout_width="60sp"
		    android:layout_marginLeft="5sp"
		    android:layout_height="50sp"
		    android:layout_weight="2"
		    android:text="@string/column_name_quantity" />
		<TextView 
		    android:id="@+id/column_name_unit"
		    android:gravity="center"
		    android:layout_width="40sp"
		    android:layout_marginLeft="5sp"
		    android:layout_height="30sp"
		    android:layout_weight="2"
		    android:text="@string/column_name_unit" />
		<TextView android:id="@+id/column_name_price"
		    android:gravity="center"
		    android:layout_width="65sp"
		    android:layout_marginLeft="5sp"
		    android:layout_height="50sp"
		    android:layout_weight="2"
		    android:text="@string/column_name_price" />
		<TextView android:id="@+id/column_name_shop"
		    android:gravity="center"
		    android:layout_width="100sp"
		    android:layout_marginRight="10sp"
		    android:layout_marginLeft="5sp"
		    android:layout_height="50sp"
		    android:layout_weight="2"
		    android:text="@string/column_name_shop" />
	</LinearLayout>
    <ListView 
        	android:id="@+id/items_listview" 
        	android:layout_width="match_parent" 
        	android:layout_height="wrap_content"/>	
</LinearLayout>